--- a/app/src/main/res/layout/fragment_gonghui.xml
+++ b/app/src/main/res/layout/fragment_gonghui.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +13,10 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/common_title_height"
             android:background="@android:color/background_light"
-            android:gravity="center_vertical"></com.minyou.manba.ui.ActionTitleView>
+            android:gravity="center_vertical"
+            app:titleText="@string/home_gonghui"
+            app:borderLine="true"
+            app:backIcon="false"></com.minyou.manba.ui.ActionTitleView>
 
         <LinearLayout
             android:layout_width="fill_parent"
