--- a/app/src/main/res/layout/fragment_street.xml
+++ b/app/src/main/res/layout/fragment_street.xml
@@ -12,12 +12,28 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/common_title_height"
             app:titleText="@string/my_shoucang"
+            app:backIcon="false"
             app:borderLine="true"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/street_recycler_view"
+        <in.srain.cube.views.ptr.PtrClassicFrameLayout
+            android:id="@+id/pcfl_refresh_favorite"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/street_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
+        <TextView
+            android:id="@+id/tv_empty_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/empty_text"
+            android:textSize="@dimen/large_textsize"/>
 
     </LinearLayout>
 </layout>
