--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:padding="@dimen/common_to_side">
 
             <TextView
@@ -120,6 +121,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:background="@drawable/common_background_press"
+            android:visibility="gone"
             android:padding="@dimen/common_to_side">
 
             <TextView
@@ -204,6 +206,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:background="@drawable/common_background_press"
+            android:visibility="gone"
             android:padding="@dimen/common_to_side">
 
             <TextView
