--- a/app/src/main/res/layout/view_action_title.xml
+++ b/app/src/main/res/layout/view_action_title.xml
@@ -18,9 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:visibility="gone"
-        android:textSize="20dp"
-        android:textColor="@color/colorCommon"
+        android:visibility="visible"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         android:text="123" />
 
     <TextView
@@ -35,9 +35,9 @@
     <View
         android:id="@+id/titlebar_line"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="0.3dp"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
+        android:visibility="visible"
         android:background="@android:color/darker_gray"/>
 
 </RelativeLayout>
